SWATCH-1978: remove deprecated "/hosts/products/{product_id}" endpoint